fix paths on buttons

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="menu main__menu">
-                    <button class="menu__section" type="button" onclick="location.href='/projects-search/'">
+                    <button class="menu__section" type="button" onclick="location.href='./projects-search/'">
                         <h3 class="menu__section-title">
                             Поиск проектов
                         </h3>
@@ -109,7 +109,7 @@
                         </div>
                     </button>
 
-                    <button class="menu__section" type="button" onclick="location.href='/add-project/'">
+                    <button class="menu__section" type="button" onclick="location.href='./add-project/'">
                         <h3 class="menu__section-title">
                             Создать проект
                         </h3>
