--- a/add-project/index.html
+++ b/add-project/index.html
@@ -181,7 +181,7 @@
                 <div class="add-project__steps">
                     <button class="steps__switch-step-button-wrapper" type="button">
                         <img class="steps__switch-step-button" src="../img/arrow-left.svg" alt="Назад">
-                        <span class="steps__switch-step-button-title steps__switch-step-button-title--ml15">
+                        <span class="steps__switch-step-button-title steps__switch-step-button-title--ml15" onmousedown="quit()">
                             Выйти
                         </span>
                     </button>
@@ -193,7 +193,7 @@
                         <button class="steps__step-number" type="button">3</button>
                     </div>
                     <button class="steps__switch-step-button-wrapper" type="button">
-                        <span class="steps__switch-step-button-title steps__switch-step-button-title--mr15">
+                        <span class="steps__switch-step-button-title steps__switch-step-button-title--mr15" onmousedown="showStep2()">
                             Далее
                         </span>
                         <img class="steps__switch-step-button steps__switch-step-button--right" src="../img/arrow-left.svg" alt="Вперед">
