--- a/add-project/index.html
+++ b/add-project/index.html
@@ -45,8 +45,10 @@
                         <li class="sitetoolbar__section" data-side-menu-element>
                             <button class="sitetoolbar__section-button" type="button">
                                 <div class="sitetoolbar__section-image-wrapper">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile" src="../img/calendar.svg" alt="Мой проект">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop" src="../img/calendar-black.svg" alt="Мой проект">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile"
+                                        src="../img/calendar.svg" alt="Мой проект">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop"
+                                        src="../img/calendar-black.svg" alt="Мой проект">
                                 </div>
                                 <h3 class="sitetoolbar__section-title">
                                     Мой проект
@@ -56,8 +58,10 @@
                         <li class="sitetoolbar__section" data-side-menu-element>
                             <button class="sitetoolbar__section-button" type="button">
                                 <div class="sitetoolbar__section-image-wrapper">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile" src="../img/personal-account.svg" alt="Мой профиль">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop" src="../img/personal-account-black.svg" alt="Мой профиль">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile"
+                                        src="../img/personal-account.svg" alt="Мой профиль">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop"
+                                        src="../img/personal-account-black.svg" alt="Мой профиль">
                                 </div>
                                 <h3 class="sitetoolbar__section-title">
                                     Мой профиль
@@ -69,7 +73,8 @@
             </div>
             <div class="header__logo-wrapper">
                 <button onclick="location.href='/'">
-                    <img class="header__logo" src="../img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
+                    <img class="header__logo" src="../img/logo-mospolytech.svg" alt="Московский политех" width="115"
+                        height="30" />
                 </button>
             </div>
             <button class="button header__button" type="button">
@@ -100,8 +105,10 @@
                                 <input class="add-project__file-input" type="file">
                             </label>
                             <div class="add-project__input-group">
-                                <input class="input add-project__input add-project__project-title" type="text" placeholder="Название" autofocus>
-                                <select class="input add-project__input add-project__input-select" aria-placeholder="sd">
+                                <input class="input add-project__input add-project__project-title" type="text"
+                                    placeholder="Название" autofocus>
+                                <select class="input add-project__input add-project__input-select"
+                                    aria-placeholder="sd">
                                     <option value="none" selected>
                                         Выберите направление
                                     </option>
@@ -132,8 +139,9 @@
                             <p class="add-project__project-description-paragraph">
                                 Укажите основную идею и направленность вашего проекта
                             </p>
-                            <textarea class="textarea add-project__project-description-textarea" placeholder="Описание"></textarea>
-                            <label  class="add-project__clip-file-button-wrapper">
+                            <textarea class="textarea add-project__project-description-textarea"
+                                placeholder="Описание"></textarea>
+                            <label class="add-project__clip-file-button-wrapper">
                                 <p class="add-project__clip-file-paragraph">
                                     Файл с подробным описанием
                                 </p>
@@ -160,14 +168,16 @@
                                         </p>
                                         <div class="add-project__vacancies-number-wrapper">
                                             <div class="add-project__vacancies-number-image-wrapper">
-                                                <img class="add-project__vacancies-number-image" src="../img/human.svg" alt="Кол-во мест">
+                                                <img class="add-project__vacancies-number-image" src="../img/human.svg"
+                                                    alt="Кол-во мест">
                                             </div>
                                             <span class="add-project__vacancies-number">
                                                 5
                                             </span>
                                         </div>
                                         <div class="add-project__vacancy-actions-button">
-                                            <img class="add-project__vacancy-actions-button-image" src="../img/arrow-bottom.svg" alt="Действия">
+                                            <img class="add-project__vacancy-actions-button-image"
+                                                src="../img/arrow-bottom.svg" alt="Действия">
                                         </div>
                                     </button>
                                 </li>
@@ -196,7 +206,8 @@
                         <span class="steps__switch-step-button-title steps__switch-step-button-title--mr15">
                             Далее
                         </span>
-                        <img class="steps__switch-step-button steps__switch-step-button--right" src="../img/arrow-left.svg" alt="Вперед">
+                        <img class="steps__switch-step-button steps__switch-step-button--right"
+                            src="../img/arrow-left.svg" alt="Вперед">
                     </button>
                 </div>
             </div>
