--- a/projects-search/index.html
+++ b/projects-search/index.html
@@ -45,8 +45,10 @@
                         <li class="sitetoolbar__section" data-side-menu-element>
                             <button class="sitetoolbar__section-button" type="button">
                                 <div class="sitetoolbar__section-image-wrapper">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile" src="../img/calendar.svg" alt="Мой проект">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop" src="../img/calendar-black.svg" alt="Мой проект">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile"
+                                        src="../img/calendar.svg" alt="Мой проект">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop"
+                                        src="../img/calendar-black.svg" alt="Мой проект">
                                 </div>
                                 <h3 class="sitetoolbar__section-title">
                                     Мой проект
@@ -56,8 +58,10 @@
                         <li class="sitetoolbar__section" data-side-menu-element>
                             <button class="sitetoolbar__section-button" type="button">
                                 <div class="sitetoolbar__section-image-wrapper">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile" src="../img/personal-account.svg" alt="Мой профиль">
-                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop" src="../img/personal-account-black.svg" alt="Мой профиль">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--mobile"
+                                        src="../img/personal-account.svg" alt="Мой профиль">
+                                    <img class="sitetoolbar__section-image sitetoolbar__section-image--desktop"
+                                        src="../img/personal-account-black.svg" alt="Мой профиль">
                                 </div>
                                 <h3 class="sitetoolbar__section-title">
                                     Мой профиль
@@ -69,7 +73,8 @@
             </div>
             <div class="header__logo-wrapper">
                 <button onclick="location.href='/'">
-                    <img class="header__logo" src="../img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
+                    <img class="header__logo" src="../img/logo-mospolytech.svg" alt="Московский политех" width="115"
+                        height="30" />
                 </button>
             </div>
             <button class="button header__button" type="button">
