fix pagination position

--- a/add-project/index.html
+++ b/add-project/index.html
@@ -202,7 +202,7 @@
                         <span class="steps__step-number-separator"></span>
                         <button class="steps__step-number" type="button">3</button>
                     </div>
-                    <button class="steps__switch-step-button-wrapper" type="button">
+                    <button class="steps__switch-step-button-wrapper steps__switch-step-button-wrapper--right" type="button">
                         <span class="steps__switch-step-button-title steps__switch-step-button-title--mr15">
                             Далее
                         </span>
